src/python/pcp.py


    The vset is defined with a "fake" array bounds of 1, which can give runtime
    array bounds complaints.  The getter methods are array bounds agnostic.
    """
    _fields_ = [ ("timestamp", timeval),
                 ("numpmid", c_int),
                 # array N of pointer to pmValueSet
                 ("vset", (POINTER(pmValueSet)) * 1) ]
    def __init__(self):
        self.numpmid = n
    def __str__(self):
        return "pmResult@%#lx id#=%d " % (addressof(self), self.numpmid) + str([" %s" % str(self.vset[i].contents) for i in xrange(self.numpmid)])
    def get_pmid(self, vset_idx):
        """ Return the pmid of vset[vset_idx]
        """
        return cast(self.vset,POINTER(POINTER(pmValueSet)))[vset_idx].contents.pmid
    def get_valfmt(self, vset_idx):
        """ Return the valfmt of vset[vset_idx]
        """
        return cast(self.vset,POINTER(POINTER(pmValueSet)))[vset_idx].contents.valfmt
    def get_numval(self, vset_idx):
        """ Return the numval of vset[vset_idx]
        """
        return cast(self.vset,POINTER(POINTER(pmValueSet)))[vset_idx].contents.numval
    def get_vlist(self, vset_idx, vlist_idx):
        """ Return the vlist[vlist_idx] of vset[vset_idx]
        """
        return cast(cast(self.vset,POINTER(POINTER(pmValueSet)))[vset_idx].contents.vlist,POINTER(pmValue))[vlist_idx]
    def get_inst(self, vset_idx, vlist_idx):
        """ Return the inst for vlist[vlist_idx] of vset[vset_idx]
        """
        return cast(cast(self.vset,POINTER(POINTER(pmValueSet)))[vset_idx].contents.vlist,POINTER(pmValue))[vlist_idx].inst

pmID = c_uint
pmInDom = c_uint

class pmDesc(Structure):
    """Structure describing a metric
    """
    _fields_ = [ ("pmid", c_uint),
                 ("type", c_int),
                 ("indom", c_uint),
                 ("sem", c_int),
                 ("units", pmUnits) ]
    def __str__(self):
        return "pmDesc@%#lx id=%#lx type=%d" % (addressof(self), self.pmid, self.type)

def get_indom( pmdesc ):
    """Internal function to extract an indom from a pmdesc

       Allow functions requiring an indom to be passed a pmDesc* instead
    """
    class Value(Union):
        _fields_ = [ ("pval", POINTER(pmDesc)),
                     ("lval", c_uint) ]
    if type (pmdesc) == POINTER(pmDesc):
        return pmdesc.contents.indom 
    else:           # raw indom
        # Goodness, there must be a simpler way to do this
        value = Value()
        value.pval = pmdesc
        return value.lval

class pmMetricSpec(Structure):
    """Structure describing a metric's specification
    """
    _fields_ = [ ("isarch", c_int),
                 ("source", c_char_p),
                 ("metric", c_int),
                 ("ninst", c_char_p),
                 ("inst",  POINTER(c_char_p)) ]

class pmLogLabel(Structure):
    """Label Record at the start of every log file - as exported above the PMAPI
    """
    _fields_ = [ ("magic", c_int),
                 ("pid_t", c_int),
                 ("start", timeval),
                 ("hostname", c_char * PM_LOG_MAXHOSTLEN),
                 ("tz", c_char * PM_TZ_MAXLEN) ]


class pmRecordHost(Structure):
    """state information between the recording session and the pmlogger
    """
    _fields_ = [ ("f_config", c_void_p),
                 ("fd_ipc", c_int),
                 ("logfile", c_char_p),
                 ("pid", c_int),
                 ("status", c_int) ]



##############################################################################
#
# PMAPI function prototypes
#

##
# PMAPI Name Space Services

libpcp.pmGetChildren.restype = c_int
libpcp.pmGetChildren.argtypes = [ c_char_p, POINTER(POINTER(c_char_p)) ]

libpcp.pmGetChildrenStatus.restype = c_int
libpcp.pmGetChildrenStatus.argtypes = [ c_char_p, POINTER(POINTER(c_char_p)), POINTER(POINTER(c_int)) ]

libpcp.pmGetPMNSLocation.restype = c_int
libpcp.pmGetPMNSLocation.argtypes = []

libpcp.pmLoadNameSpace.restype = c_int
libpcp.pmLoadNameSpace.argtypes = [ c_char_p ]

libpcp.pmLookupName.restype = c_int
libpcp.pmLookupName.argtypes = [ c_int, (c_char_p * 1), POINTER(c_uint) ]

libpcp.pmNameAll.restype = c_int
libpcp.pmNameAll.argtypes = [ c_int, POINTER(POINTER(c_char_p)) ]

libpcp.pmNameID.restype = c_int
libpcp.pmNameID.argtypes = [ c_int, POINTER(c_char_p) ]

traverseCB_type = CFUNCTYPE( None, c_char_p )
libpcp.pmTraversePMNS.restype = c_int
libpcp.pmTraversePMNS.argtypes = [ c_char_p, traverseCB_type ]

libpcp.pmUnloadNameSpace.restype = c_int
libpcp.pmUnloadNameSpace.argtypes = [ ]


##
# PMAPI Metrics Description Services

libpcp.pmLookupDesc.restype = c_int
libpcp.pmLookupDesc.argtypes = [ c_uint, POINTER(pmDesc) ]

libpcp.pmLookupInDomText.restype = c_int
libpcp.pmLookupInDomText.argtypes = [ c_uint, c_int, POINTER(c_char_p) ]

libpcp.pmLookupText.restype = c_int
libpcp.pmLookupText.argtypes = [ c_uint, c_int, POINTER(c_char_p) ]


##
# PMAPI Instance Domain Services

libpcp.pmGetInDom.restype = c_int
libpcp.pmGetInDom.argtypes = [
                  c_uint, POINTER(POINTER(c_int)), POINTER(POINTER(c_char_p)) ]

libpcp.pmLookupInDom.restype = c_int
libpcp.pmLookupInDom.argtypes = [ c_uint, c_char_p ]

libpcp.pmNameInDom.restype = c_int
libpcp.pmNameInDom.argtypes = [ c_uint, c_uint, POINTER(c_char_p) ]


##
# PMAPI Context Services

libpcp.pmNewContext.restype = c_int
libpcp.pmNewContext.argtypes = [ c_int, c_char_p ]

libpcp.pmDestroyContext.restype = c_int
libpcp.pmDestroyContext.argtypes = [ c_int ]

libpcp.pmDupContext.restype = c_int
libpcp.pmDupContext.argtypes = [ ]

libpcp.pmUseContext.restype = c_int
libpcp.pmUseContext.argtypes = [ c_int ]

libpcp.pmWhichContext.restype = c_int
libpcp.pmWhichContext.argtypes = [ ]

libpcp.pmAddProfile.restype = c_int
libpcp.pmAddProfile.argtypes = [ c_uint, c_int, POINTER(c_int) ]

libpcp.pmDelProfile.restype = c_int
libpcp.pmDelProfile.argtypes = [ c_uint, c_int, POINTER(c_int) ]

libpcp.pmSetMode.restype = c_int
libpcp.pmSetMode.argtypes = [ c_int, POINTER(timeval), c_int ]

libpcp.pmReconnectContext.restype = c_int
libpcp.pmReconnectContext.argtypes = [ c_int ]

libpcp.pmGetContextHostName.restype = c_char_p
libpcp.pmGetContextHostName.argtypes = [ c_int ]


##
# PMAPI Timezone Services

libpcp.pmNewContextZone.restype = c_int
libpcp.pmNewContextZone.argtypes = [ ]

libpcp.pmNewZone.restype = c_int
libpcp.pmNewZone.argtypes = [ c_char_p ]

libpcp.pmUseZone.restype = c_int
libpcp.pmUseZone.argtypes = [ c_int ]

libpcp.pmWhichZone.restype = c_int
libpcp.pmWhichZone.argtypes = [ POINTER(c_char_p) ]


##
# PMAPI Metrics Services

libpcp.pmFetch.restype = c_int
libpcp.pmFetch.argtypes = [ c_int, POINTER(c_uint), POINTER(POINTER(pmResult)) ]

libpcp.pmFreeResult.restype = None
libpcp.pmFreeResult.argtypes = [ POINTER(pmResult) ]

libpcp.pmStore.restype = c_int
libpcp.pmStore.argtypes = [ POINTER(pmResult) ]


##
# PMAPI Record-Mode Services

libpcp_gui.pmRecordSetup.restype = c_long
libpcp_gui.pmRecordSetup.argtypes = [ c_char_p, c_char_p, c_int]

libpcp_gui.pmRecordAddHost.restype = c_int
libpcp_gui.pmRecordAddHost.argtypes = [ c_char_p, c_int, POINTER(POINTER(pmRecordHost))]

libpcp_gui.pmRecordControl.restype = c_int
libpcp_gui.pmRecordControl.argtypes = [ POINTER(pmRecordHost), c_int, c_char_p ]


##
# PMI Log Import Services

libpcp_import.pmiDump.restype = None
libpcp_import.pmiDump.argtypes = None

libpcp_import.pmiID.restype = pmID
libpcp_import.pmiID.argtypes = [ c_int, c_int, c_int ]

libpcp_import.pmiInDom.restype = pmInDom
libpcp_import.pmiInDom.argtypes = [ c_int, c_int ]

libpcp_import.pmiUnits.restype = pmUnits
libpcp_import.pmiUnits.argtypes = [ c_int, c_int, c_int, c_int, c_int, c_int ]

libpcp_import.pmiErrStr_r.restype = c_char_p
libpcp_import.pmiErrStr_r.argtypes = [ c_int, c_char_p, c_int ]

libpcp_import.pmiStart.restype = c_int
libpcp_import.pmiStart.argtypes = [ c_char_p, c_int ]

libpcp_import.pmiUseContext.restype = c_int
libpcp_import.pmiUseContext.argtypes = [ c_int ]

libpcp_import.pmiEnd.restype = c_int
libpcp_import.pmiEnd.argtypes = None

libpcp_import.pmiSetHostname.restype = c_int
libpcp_import.pmiSetHostname.argtypes = [ c_char_p ]

libpcp_import.pmiSetTimezone.restype = c_int
libpcp_import.pmiSetTimezone.argtypes = [ c_char_p ]

libpcp_import.pmiAddMetric.restype = c_int
libpcp_import.pmiAddMetric.argtypes = [ c_char_p, pmID, c_int, pmInDom, c_int, pmUnits ]

libpcp_import.pmiAddInstance.restype = c_int
libpcp_import.pmiAddInstance.argtypes = [ pmInDom, c_char_p, c_int ]

libpcp_import.pmiPutValue.restype = c_int
libpcp_import.pmiPutValue.argtypes = [ c_char_p, c_char_p, c_char_p ]

libpcp_import.pmiGetHandle.restype = c_int
libpcp_import.pmiGetHandle.argtypes = [ c_char_p, c_char_p ]

libpcp_import.pmiPutValueHandle.restype = c_int
libpcp_import.pmiPutValueHandle.argtypes = [ c_int, c_char_p ]

libpcp_import.pmiWrite.restype = c_int
libpcp_import.pmiWrite.argtypes = [ c_int, c_int ]

libpcp_import.pmiPutResult.restype = c_int
libpcp_import.pmiPutResult.argtypes = [ POINTER(pmResult) ]


##
# PMAPI Archive-Specific Services

libpcp.pmGetArchiveLabel.restype = c_int
libpcp.pmGetArchiveLabel.argtypes = [ POINTER(pmLogLabel) ]

libpcp.pmGetArchiveEnd.restype = c_int
libpcp.pmGetArchiveEnd.argtypes = [ timeval ]

libpcp.pmGetInDomArchive.restype = c_int
libpcp.pmGetInDomArchive.argtypes = [
                  c_uint, POINTER(POINTER(c_int)), POINTER(POINTER(c_char_p)) ]

libpcp.pmLookupInDomArchive.restype = c_int
libpcp.pmLookupInDom.argtypes = [ c_uint, c_char_p ]
libpcp.pmLookupInDomArchive.argtypes = [ pmInDom, c_char_p ]

libpcp.pmNameInDomArchive.restype = c_int
libpcp.pmNameInDomArchive.argtypes = [ pmInDom, c_int ]

libpcp.pmFetchArchive.restype = c_int
libpcp.pmFetchArchive.argtypes = [ POINTER(POINTER(pmResult)) ]


##
# PMAPI Time Control Services

#libpcp.pmCtime.restype = c_int
#libpcp.pmCtime.argtypes = [ ]

#libpcp.pmLocaltime.restype = c_int
#libpcp.pmLocaltime.argtypes = [ ]

#libpcp.pmParseTimeWindow.restype = c_int
#libpcp.pmParseTimeWindow.argtypes = [ ]

#libpcp.pmTimeConnect.restype = c_int
#libpcp.pmTimeConnect.argtypes = [ ]

#libpcp.pmTimeDisconnect.restype = c_int
#libpcp.pmTimeDisconnect.argtypes = [ ]

#libpcp.pmTimeGetPort.restype = c_int
#libpcp.pmTimeGetPort.argtypes = [ ]

#libpcp.pmTimeRecv.restype = c_int
#libpcp.pmTimeRecv.argtypes = [ ]

#libpcp.pmTimeSendAck.restype = c_int
#libpcp.pmTimeSendAck.argtypes = [ ]

#libpcp.pmTimeSendBounds.restype = c_int
#libpcp.pmTimeSendBounds.argtypes = [ ]

#libpcp.pmTimeSendMode.restype = c_int
#libpcp.pmTimeSendMode.argtypes = [ ]

#libpcp.pmTimeSendPosition.restype = c_int
#libpcp.pmTimeSendPosition.argtypes = [ ]

#libpcp.pmTimeSendTimezone.restype = c_int
#libpcp.pmTimeSendTimezone.argtypes = [ ]

#libpcp.pmTimeShowDialog.restype = c_int
#libpcp.pmTimeShowDialog.argtypes = [ ]

#libpcp.pmTimeGetStatePixmap.restype = c_int
#libpcp.pmTimeGetStatePixmap.argtypes = [ ]


##
# PMAPI Ancilliary Support Services


libpcp.pmGetConfig.restype = c_char_p
libpcp.pmGetConfig.argtypes = [ c_char_p ]

libpcp.pmErrStr_r.restype = c_char_p
libpcp.pmErrStr_r.argtypes = [ c_int, c_char_p, c_int ]

libpcp.pmExtractValue.restype = c_int
libpcp.pmExtractValue.argtypes = [
           c_int, POINTER(pmValue), c_int, POINTER(pmAtomValue), c_int  ]

libpcp.pmConvScale.restype = c_int
libpcp.pmConvScale.argtypes = [
           c_int, POINTER(pmAtomValue), POINTER(pmUnits),
           POINTER(pmAtomValue), POINTER(pmUnits)  ]

libpcp.pmUnitsStr_r.restype = c_char_p
libpcp.pmUnitsStr_r.argtypes = [ POINTER(pmUnits), c_char_p, c_int ]

libpcp.pmIDStr_r.restype = c_char_p
libpcp.pmIDStr_r.argtypes = [ c_uint, c_char_p, c_int ]

libpcp.pmInDomStr_r.restype = c_char_p
libpcp.pmInDomStr_r.argtypes = [ c_uint, c_char_p, c_int ]

libpcp.pmTypeStr_r.restype = c_char_p
libpcp.pmTypeStr_r.argtypes = [ c_int, c_char_p, c_int ]

libpcp.pmAtomStr_r.restype = c_char_p
libpcp.pmAtomStr_r.argtypes = [ POINTER(pmAtomValue), c_int, c_char_p, c_int ]
